# browser-use-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
bench/: README.md  analyze_runs.py  bench.py  compare_eval_run.py  compare_to_upstream.py  deep_history_compare.py  diff_analysis.py  enrich_cost.py  env_file.py  export_failed_tasks.py  posthog_preflight.py  release_preflight.py  rerun_failed_tasks.py  results.json  run_ours.py  run_task_file.py  run_theirs.py  sample_posthog_tasks.py  summarize_failed_run.py  v810_blowup_trace.py
crates/bu-browser/: Cargo.toml
crates/bu-browser/src/: lib.rs
crates/bu-cdp/: Cargo.toml
crates/bu-cdp/src/: lib.rs
crates/bu-dom/: Cargo.toml
crates/bu-dom/src/: lib.rs  script.js
crates/bu-py/: Cargo.toml
crates/bu-py/src/: lib.rs
docs/: eval_learnings_2026-05-14T235240Z.md  eval_methodology.md  v0.12-plan.md  v0.8_data_analysis.md  v0.8_revisit_queue.md
python/browser_use_rs/: __init__.py  _browser_tools.py  _extra_tools.py  _native.pyi  _scratchpad.py  agent.py  agent_gemini.py  browser.py  controller.py  observability.py  pricing.py  tools.py  views.py
python/browser_use_rs/agent/: __init__.py  views.py
python/browser_use_rs/llm/: __init__.py  anthropic.py  azure.py  base.py  google.py  groq.py  messages.py  openai.py
python/examples/: agent_demo.py  agent_demo_gemini.py  browser.py  click.py  hello.py
tests/: test_agent_compat.py  test_batch_guard_handling.py  test_bench_analyze_runs.py  test_bench_compare_eval_run.py  test_bench_env_file.py  test_bench_export_failed_tasks.py  test_bench_orchestrator.py  test_bench_posthog_preflight.py  test_bench_release_preflight.py  test_bench_rerun_failed_tasks.py  test_bench_run_task_file.py  test_bench_runners.py  test_bench_sample_posthog_tasks.py  test_bench_summarize_failed_run.py  test_blocked_search_guards.py  test_cdp_recovery.py  test_context_bloat_guards.py  test_done_count_helpers.py  test_download_file_tools.py  test_extractor_runtime_context.py  test_final_answer_guards.py  test_google_media_resolution.py  test_prompt_metrics.py  test_result_card_tool.py  test_runtime_context.py  test_tool_aliases.py  test_tool_argument_normalization.py  test_va_facility_locator.py
