[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.4.12"
edition = "2021"
license = "MIT"
authors = ["browser-use <hello@browser-use.com>"]
repository = "https://github.com/browser-use/browser-use-rs"
rust-version = "1.80"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2"
base64 = "0.22"
pyo3 = { version = "0.24", features = ["abi3-py310"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }

bu-cdp = { path = "crates/bu-cdp", version = "0.4.12" }
bu-browser = { path = "crates/bu-browser", version = "0.4.12" }
bu-dom = { path = "crates/bu-dom", version = "0.4.12" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
