[project]
name = "browser-use-rs"
version = "0.7.1"
description = "Lean Rust runtime for browser-use, with Python bindings"
requires-python = ">=3.10"
authors = [{ name = "Saurav Panda", email = "support@browser-use.com" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "anthropic>=0.76",
    "google-genai>=1.0",
    "openai>=1.50",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["maturin>=1.7,<2", "pytest>=8"]

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/bu-py/Cargo.toml"
python-source = "python"
module-name = "browser_use_rs._native"
features = ["pyo3/extension-module"]
