[package]
name = "bu-dom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "DOM snapshot, indexed clickable extraction, and LLM-facing serialization"

[dependencies]
bu-cdp.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
